# api-flask

./: pyproject.toml
instance/: project.db
src/: app.py  db.py
src/controllers/: user.py
