[project]
name = "flaskk"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcos Augusto Silva",email = "marcosdeantonio2020@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask",
    "flask-sqlalchemy"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
